<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/VkFreeWhite"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/VkFreeWhite"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/Control_panel"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            />
        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:id="@+id/Proxy_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:orientation="vertical"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Proxy"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_is_use_proxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/host"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <EditText

                        android:id="@+id/viewHost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/none"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="30dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Port:"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                    />

                    <EditText

                        android:id="@+id/viewPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/none"
                        android:inputType="number|numberSigned|numberDecimal"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp">

                    <Button

                        android:id="@+id/button_to_default"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/button_background"
                        android:onClick="ToDefault"
                        android:text="@string/to_default"
                        android:textColor="@color/VkFreeWhite"
                        android:textSize="12sp"

                        />

                    <Button
                        android:id="@+id/button_apply"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/button_background"
                        android:onClick="ApplyChanges"
                        android:text="@string/apply"
                        android:textColor="@color/VkFreeWhite"
                        android:textSize="12sp"

                        />


                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView

                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="URL:"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText

                android:id="@+id/viewUrl"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/img_button_background"
                android:onClick="loadUrl"
                android:rotation="180"
                android:src="@mipmap/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/viewUrl"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>



        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />

        <CheckBox
            android:id="@+id/isRefresh_page_swipe"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"

            android:text="@string/refresh_page"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            >

            <ImageView

                android:layout_alignParentLeft="true"
                android:id="@+id/copy_link"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="CopyLink"
                android:textColor="@color/VkFree"
                android:src="@mipmap/copy_image"
                android:background="@drawable/img_button_background"
                android:layout_marginLeft="20dp"
                />
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_back"
                android:background="@drawable/img_button_background"
                android:layout_marginRight="20dp"
                android:onClick="WebBack"
                android:layout_marginLeft="20dp"
                />


            <ImageView
                android:layout_alignParentRight="true"
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@mipmap/refresh_image"
                android:background="@drawable/img_button_background"
                android:layout_marginRight="20dp"
                android:onClick="RefreshPage"
                />

        </LinearLayout>
        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</ScrollView>